# serial-gcode-sender

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  codecat-161113-4d5730c1c63a.json
.github/: FUNDING.yml
crates/gcs/: Cargo.toml
crates/gcs/src/: lib.rs  storage.rs  vec_reader.rs
crates/serial/: Cargo.toml
crates/serial/src/: available_ports.rs  events.rs  lib.rs  serial.rs
src/: config.rs  input_handler.rs  main.rs  storage.rs  term.rs
