[workspace]
members = [
  "crates/serial",
  "crates/gcs",
]

[package]
name = "laser"
version = "0.1.0"
edition = "2021"

[dependencies]
serial = {path = "./crates/serial"}
gcs = {path = "./crates/gcs"}
structopt = "0.3.13"
color-eyre = "0.5.11"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
indicatif = "0.16.2"
